--- a/style.css
+++ b/style.css
@@ -1,87 +1,85 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url(//db.onlinewebfonts.com/c/f4d1593471d222ddebd973210265762a?family=Pokemon);
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #346eeb;
-    font-family: 'Roboto', sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
-    padding: 20px;
-
+  background-color: #346eeb;
+  font-family: 'Pokemon';
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+  padding: 20px;
 }
 
 .container {
-    background-color: #fff;
-    border-radius: 50px;
-    padding: 50px 20px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    max-width: 100%;
-    width: 350px;
+  background-color: #fff;
+  border-radius: 50px;
+  padding: 50px 20px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  width: 350px;
 }
 
 .card {
-    width: 150px;
-    height: 150px;
-    padding: 10px;
-    margin: 10;
-    border-radius: 10px;
+  width: 150px;
+  height: 150px;
+  padding: 10px;
+  margin: 10;
+  border-radius: 10px;
 }
 
 h3 {
-    margin: 0;
-    opacity: 0.5;
-    letter-spacing: 1.5px;
+  margin: 0;
+  opacity: 0.5;
+  letter-spacing: 1.5px;
 }
 
 .name {
-    font-size: 30px;
-    letter-spacing: 1px;
-    line-height: 40px;
-    margin: 25px auto;
-    max-width: 200px;
-    opacity: 0.5;
+  font-size: 30px;
+  letter-spacing: 1px;
+  line-height: 40px;
+  margin: 25px auto;
+  max-width: 200px;
+  opacity: 0.5;
 }
 
 .btn {
-    background-color: rgb(233, 103, 86);
-    color: #fff;
-    border: 0;
-    border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
-    padding: 14px 14px;
-    font-size: 16px;
-    cursor: pointer;
-
+  background-color: rgb(233, 103, 86);
+  color: #fff;
+  border: 0;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
+  padding: 14px 14px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
-.btn:active{
-    transform: scale(0.98);
+.btn:active {
+  transform: scale(0.98);
 }
 
-.btn:focus{
-    outline: 0;
+.btn:focus {
+  outline: 0;
 }
 
 img {
-    display: flex;
-    max-width: 100%;
-    height: 150px;
-    width: 150px;
+  display: flex;
+  max-width: 100%;
+  height: 150px;
+  width: 150px;
 }
 
 img:hover {
-    transform: scale(1.3);
+  transform: scale(1.3);
 }
