--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 100%;
-  width: 350px;
+  width: 400px;
 }
 
 .card {
@@ -49,9 +49,18 @@ h3 {
   font-size: 30px;
   letter-spacing: 1px;
   line-height: 40px;
-  margin: 25px auto;
+  margin: 2px auto;
   max-width: 200px;
   opacity: 0.5;
+}
+
+.type {
+  font-size: 20px;
+  letter-spacing: 1px;
+  line-height: 20px;
+  margin: 20px auto;
+  max-width: 200px;
+  opacity: 0.35;
 }
 
 .btn {
