--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Modern+Antiqua&display=swap');
 
 * {
   box-sizing: border-box;
@@ -6,7 +6,7 @@
 
 body {
   background-color: #346eeb;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Modern Antiqua', cursive;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,7 +28,7 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 100%;
-  width: 400px;
+  width: 450px;
 }
 
 .card {
@@ -39,7 +39,7 @@ body {
   border-radius: 10px;
 }
 
-h3 {
+h1 {
   margin: 0;
   opacity: 0.5;
   letter-spacing: 1.5px;
@@ -70,7 +70,8 @@ h3 {
   border-radius: 10px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1), 0 6px 6px rgba(0, 0, 0, 0.1);
   padding: 14px 14px;
-  font-size: 16px;
+  font-family: 'Modern Antiqua', cursive;
+  font-size: 23px;
   cursor: pointer;
 }
 
